Updating to NeuronRobotics/NeuronRobotics.github.io@5fa812bd9d7146181b5459b37382d62799411298.

--- a/index.html
+++ b/index.html
@@ -302,8 +302,10 @@
 		<pre class="bash">
 							
 							<code>
+						
 	sudo add-apt-repository ppa:mad-hephaestus/commonwealthrobotics -y
 	sudo apt-get update
+	sudo apt-get remove arduino bowlerstudio 
 	sudo apt-get install bowlerstudio oracle-java8-set-default oracle-java8-installer arduino-ide
 							</code>
 		</pre>
