Updating to NeuronRobotics/NeuronRobotics.github.io@ea939166618b14bc7cc65894d0f7b2fe50c02968.

--- a/index.html
+++ b/index.html
@@ -270,11 +270,7 @@
 								style="margin-left: auto; margin-right: auto;">
 						</p>
 
-						<h4 class="text-center">
-							<a
-								href="https://github.com/NeuronRobotics/BowlerStudio#bash-linuxos-xcygwinother-unix-like-shell">Older
-								Builds (Ubuntu 14.04)</a>
-						</h4>
+
 
 
 					</div>
@@ -309,9 +305,9 @@
 							</code>
 		</pre>
 	</div>
-	</div>
+	<div>
 		<a name="PPASID"></a>
-		<p class="lead text-center">Debian Sid Instructions</p>
+		<p class="lead text-center">Other Ubuntu/Debian besides 16.04 Instructions</p>
 		<pre class="bash">
 							
 							<code>
@@ -323,6 +319,14 @@
 	sudo apt-get install bowlerstudio oracle-java8-set-default oracle-java8-installer arduino-ide
 							</code>
 		</pre>
+		
+	</div>
+	<div>
+	<h4 class="text-center">
+		<a
+		href="https://github.com/NeuronRobotics/BowlerStudio#bash-linuxos-xcygwinother-unix-like-shell">Older
+		Builds (Ubuntu 14.04)</a>
+	</h4>	
 	</div>
 	<!-- /.content-section-a -->
 
